--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+adlfs = "^2024.4.1"
+python-dotenv = "^1.0.1"
+pdfminer-six = "^20231228"
 
 
 [build-system]
