--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python-dotenv = "^1.0.1"
 pdfminer-six = "^20231228"
 requests= "^2.31.0"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
